a1/brendan_gordon/TEST_PROGRAMS/invalidtype/yu_hua/c.min
while "haha" do
  print "haha";
done
